--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <span class="method-icon">✉️</span>
                                 <div>
                                     <span class="method-label">Email</span>
-                                    <a href="mailto:arq.nunezl@hotmail.com" class="method-link">juan.ant772@gmail.com</a>
+                                    <a href="mailto:arq.nunezl@hotmail.com" class="method-link">arq.nunezl@hotmail.com</a>
                                 </div>
                             </div>
                             <div class="method-item">
